tests/paczka1/small_fuzzy/97471097.err
Error in line 2: A625 A625 45,4
Error in line 4: K5EPOb A434 87,0
Error in line 1: b5PhMcYYV A484 76,8
Error in line 7: K5EPOb S350 17,1
